--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+gitler.xcodeproj/project.xcworkspace/contents.xcworkspacedata
